better style + other pages structured

--- a/index.html
+++ b/index.html
@@ -7,34 +7,53 @@
 
 <style>
     body {
-        font-family: Helvetica, Georgia, "Times New Roman";
-        color: #D5D5DA;
-        background-color: #1A1C2F }
+        font-family: Verdana, "Times New Roman";
+        color: #416a59;
+        background-image: url("https://png.pngtree.com/thumb_back/fw800/background/20190221/ourmid/pngtree-ad-background-poster-h5-image_30945.jpg");
+        background-color: #f5eec2 }
+
+    .titlePrin{
+        margin: 90px 500px;
+        line-height: 70px;
+        padding-left: 100px;
+        background: antiquewhite;
+        border-radius: 25px;
+        font-weight: bold;
+    }
+
+    .titleSec{
+        padding-left: 650px;
+    }
+
+    .text {
+        text-align: center;
+        color: #39395f;
+        font-size: medium;
+    }
 
     .topnav {
         height: 50px;
         width: 100%;
-        background-color: #05256B;
         position: relative;
+        padding-left: 500px;
     }
 
     .topnav a {
         float: left;
-        color: #f2f2f2;
+        color: #00536B;
         text-align: center;
         padding: 14px 16px;
         text-decoration: none;
         font-size: 17px;
+        font-weight: bold;
     }
 
     .topnav a:hover {
-        background-color: #1222B4;
-        color: #FFFFFF;
+        color: #39395f;
     }
 
     .topnav a.active {
-        background-color: #888888;
-        color: #FFFFFF;
+        color: #f5eec2;
     }
     @media screen and (max-width: 600px) {
         .topnav a:not(:first-child) {display: none;}
@@ -62,7 +81,7 @@
 <body>
 
 <div class="topnav" id="myTopnav">
-    <a class="Inicio" href="#home">Inicio</a>
+    <a class="Inicio" href="index.html">Inicio</a>
     <a href="Backend.html">Backend</a>
     <a href="Backoffice.html">Backoffice</a>
     <a href="Mobile.html">Mobile</a>
@@ -71,9 +90,15 @@
     </a>
 </div>
 
-<div style="padding-left:16px">
-    <h1>Seedyfiuba</h1>
+<div class="titlePrin">
+    <h1>SEEDYFIUBA</h1>
+</div>
+
+<div class="titleSec">
     <h2>Grupo 3</h2>
+</div>
+
+<div class="text">
     <p>Esta pagina contiene la documentacion referida al proyecto Seedyfiuba, desarrollado para la materia Taller de Programacion II en el primer cuatrimestre del 2021.</p>
     <p>En la barra de navegacion superior se pueden ver las distintas secciones disponibles</p>
 </div>
