--- a/Mobile.html
+++ b/Mobile.html
@@ -1,10 +1,115 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es-MX">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
+
+<style>
+    body {
+        font-family: Verdana, "Times New Roman";
+        color: #416a59;
+        background-image: url("https://png.pngtree.com/thumb_back/fw800/background/20190221/ourmid/pngtree-ad-background-poster-h5-image_30945.jpg");
+        background-color: #f5eec2 }
+
+    .titlePrin{
+        margin: 90px 500px;
+        padding-left: 110px;
+        color: #416a59;
+        font-weight: bold;
+    }
+
+    .titleSec{
+        padding-left: 650px;
+    }
+
+    .text {
+        text-align: center;
+        color: #39395f;
+        font-size: medium;
+    }
+
+    .topnav {
+        height: 50px;
+        width: 100%;
+        position: relative;
+        padding-left: 500px;
+    }
+
+    .topnav a {
+        float: left;
+        color: #00536B;
+        text-align: center;
+        padding: 14px 16px;
+        text-decoration: none;
+        font-size: 17px;
+        font-weight: bold;
+    }
+
+    .topnav a:hover {
+        color: #39395f;
+    }
+
+    .topnav a.active {
+        color: #f5eec2;
+    }
+    @media screen and (max-width: 600px) {
+        .topnav a:not(:first-child) {display: none;}
+        .topnav a.icon {
+            float: right;
+            display: block;
+        }
+    }
+
+    @media screen and (max-width: 600px) {
+        .topnav.responsive {position: relative;}
+        .topnav.responsive .icon {
+            position: absolute;
+            right: 0;
+            top: 0;
+        }
+        .topnav.responsive a {
+            float: none;
+            display: block;
+            text-align: left;
+        }
+    }
+</style>
+
 <body>
+
+<div class="topnav" id="myTopnav">
+    <a class="Inicio" href="index.html">Inicio</a>
+    <a href="Backend.html">Backend</a>
+    <a href="Backoffice.html">Backoffice</a>
+    <a href="Mobile.html">Mobile</a>
+    <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+        <i class="fa fa-bars"></i>
+    </a>
+</div>
+
+<div class="titlePrin">
+    <h1>MOBILE</h1>
+</div>
+
+<div class="titleSec">
+    <h2></h2>
+</div>
+
+<div class="text">
+    <p></p>
+</div>
+
+<script>
+    function myFunction() {
+        var x = document.getElementById("myTopnav");
+        if (x.className === "topnav") {
+            x.className += " responsive";
+        } else {
+            x.className = "topnav";
+        }
+    }
+</script>
 
 </body>
 </html>
