--- a/Principal/Backend.html
+++ b/Principal/Backend.html
@@ -79,7 +79,7 @@
 <body>
 
 <div class="topnav" id="myTopnav">
-    <a class="Inicio" href="index.html">Inicio</a>
+    <a class="Inicio" href="../index.html">Inicio</a>
     <a href="Backend.html">Backend</a>
     <a href="Backoffice.html">Backoffice</a>
     <a href="Mobile.html">Mobile</a>
