--- a/index.html
+++ b/index.html
@@ -82,9 +82,9 @@
 
 <div class="topnav" id="myTopnav">
     <a class="Inicio" href="index.html">Inicio</a>
-    <a href="Backend.html">Backend</a>
-    <a href="Backoffice.html">Backoffice</a>
-    <a href="Mobile.html">Mobile</a>
+    <a href="Principal/Backend.html">Backend</a>
+    <a href="Principal/Backoffice.html">Backoffice</a>
+    <a href="Principal/Mobile.html">Mobile</a>
     <a href="javascript:void(0);" class="icon" onclick="myFunction()">
         <i class="fa fa-bars"></i>
     </a>
