--- a/Principal/Backoffice.html
+++ b/Principal/Backoffice.html
@@ -13,14 +13,13 @@
         background-color: #f5eec2 }
 
     .titlePrin{
-        margin: 90px 500px;
-        padding-left: 110px;
+        text-align: center;
         color: #416a59;
         font-weight: bold;
     }
 
     .titleSec{
-        padding-left: 650px;
+        text-align: center;
     }
 
     .text {
@@ -80,7 +79,7 @@
 
 <div class="topnav" id="myTopnav">
     <a class="Inicio" href="../index.html">Inicio</a>
-    <a href="Backend.html">Backend</a>
+    <a href="../Backend/Backend.html">Backend</a>
     <a href="Backoffice.html">Backoffice</a>
     <a href="Mobile.html">Mobile</a>
     <a href="javascript:void(0);" class="icon" onclick="myFunction()">
