--- a/Backend/Backend.html
+++ b/Backend/Backend.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="es-MX">
 <head>
-  <meta charset="UTF-8">
-  <title>Title</title>
+    <meta charset="UTF-8">
+    <title>Title</title>
 </head>
 
 <style>
@@ -13,11 +13,8 @@
         background-color: #f5eec2 }
 
     .titlePrin{
-        margin: 90px 500px;
-        line-height: 70px;
-        padding-left: 100px;
-        background: antiquewhite;
-        border-radius: 25px;
+        text-align: center;
+        color: #416a59;
         font-weight: bold;
     }
 
@@ -27,7 +24,7 @@
 
     .text {
         text-align: center;
-        color: #416a59;
+        color: #39395f;
         font-size: medium;
     }
 
@@ -76,52 +73,65 @@
             text-align: left;
         }
     }
+    .vertical-menu {
+        text-align: center;
+        width: 200px;
+        padding-left: 600px;
+    }
+
+    .vertical-menu a {
+        background-color: #416a59;
+        color: antiquewhite;
+        display: block;
+        padding: 12px;
+        text-decoration: none;
+    }
+
+    .vertical-menu a:hover {
+        background-color: #ccc;
+    }
+
+    .vertical-menu a.active {
+        background-color: #04AA6D;
+        color: white;
+    }
 </style>
 
 <body>
 
 <div class="topnav" id="myTopnav">
-    <a class="Inicio" href="index.html">Inicio</a>
-    <a href="Backend/Backend.html">Backend</a>
-    <a href="Principal/Backoffice.html">Backoffice</a>
-    <a href="Principal/Mobile.html">Mobile</a>
+    <a class="Inicio" href="../index.html">Inicio</a>
+    <a href="Backend.html">Backend</a>
+    <a href="../Principal/Backoffice.html">Backoffice</a>
+    <a href="../Principal/Mobile.html">Mobile</a>
     <a href="javascript:void(0);" class="icon" onclick="myFunction()">
         <i class="fa fa-bars"></i>
     </a>
 </div>
 
 <div class="titlePrin">
-    <h1>SEEDYFIUBA</h1>
-</div>
-
-<div class="titleSec">
-    <h2>¿Qué es Seedyfiuba?</h2>
+    <h1>BACKEND</h1>
 </div>
 
 <div class="text">
-    <p>Es una plataforma digital, implementada como trabajo práctico para la materia Taller y Programación II</p>
-    <p>Para más información sobre el trabajo que se llevo a cabo, visitar la <a href="https://taller-de-programacion-2.github.io/works/statement/2021/1/tp/enunciado/">página de la materia</a></p>
-    <p>La idea es que esta plataforma facilite a la financiación de proyectos de manera colaborativa crowdfounding</p>
-    <p>En esta página se encuentra toda la documentación del proyecto llevado a cabo.</p>
-    <p>En la barra de navegación superior se pueden explorar las distintas secciones</p>
+    <p style="font-weight: bold">En esta sección se incluye la documentación referida a los microservicios de backend.</p>
 </div>
 
 <div class="titleSec">
-    <h2>¿Quiénes somos?</h2>
+    <h2>Arquitectura general</h2>
+    <img src="../Images/ArquitecturaSeedyfiuba.png">
 </div>
 
-<div class="text">
-    <p>Somos alumnos de la Facultad de Ingeniería de la Universidad de Buenos Aires:</p>
-    <p>Daniel Bizari</p>
-    <p>Daniela Carrero</p>
-    <p>Milagros Cruz</p>
-    <p>Gerónimo Illescas</p>
-    <p>Juntos formamos el grupo 3 de Taller y Programacion II, materia para la cual se desarrolló esta plataforma.</p>
+<div class="titleSec">
+    <h2>Microservicios</h2>
 </div>
 
-
-
-
+<div class="vertical-menu">
+    <a href="Users.html">Users</a>
+    <a href="Projects.html">Projects</a>
+    <a href="Middle.html">Middle</a>
+    <a href="Smartcontracts.html">Smartcontracts</a>
+</div>
 
 <script>
     function myFunction() {
