--- a/Backend/Backend.html
+++ b/Backend/Backend.html
@@ -24,8 +24,9 @@
 
     .text {
         text-align: center;
-        color: #39395f;
+        color: #183a1d;
         font-size: medium;
+        font-weight: bold;
     }
 
     .topnav {
@@ -103,7 +104,7 @@
     <a class="Inicio" href="../index.html">Inicio</a>
     <a href="Backend.html">Backend</a>
     <a href="../Principal/Backoffice.html">Backoffice</a>
-    <a href="../Principal/Mobile.html">Mobile</a>
+    <a href="../Mobile/Mobile.html">Mobile</a>
     <a href="javascript:void(0);" class="icon" onclick="myFunction()">
         <i class="fa fa-bars"></i>
     </a>
@@ -114,7 +115,7 @@
 </div>
 
 <div class="text">
-    <p style="font-weight: bold">En esta sección se incluye la documentación referida a los microservicios de backend.</p>
+    <p>En esta sección se incluye la documentación referida a los microservicios de backend.</p>
 </div>
 
 <div class="titleSec">
