--- a/Backend/Projects.html
+++ b/Backend/Projects.html
@@ -24,8 +24,9 @@
 
     .text {
         text-align: center;
-        color: #39395f;
+        color: #416a59;
         font-size: medium;
+        font-weight: bold;
     }
 
     .sidebar {
@@ -90,7 +91,7 @@
     <a class="Inicio" href="../index.html">Inicio</a>
     <a href="../Backend/Backend.html">Backend</a>
     <a href="../Principal/Backoffice.html">Backoffice</a>
-    <a href="../Principal/Mobile.html">Mobile</a>
+    <a href="../Mobile/Mobile.html">Mobile</a>
     <a href="javascript:void(0);" class="icon" onclick="myFunction()">
         <i class="fa fa-bars"></i>
     </a>
