--- a/index.html
+++ b/index.html
@@ -27,8 +27,9 @@
 
     .text {
         text-align: center;
-        color: #416a59;
+        color: #183a1d;
         font-size: medium;
+        font-weight: bold;
     }
 
     .topnav {
@@ -84,7 +85,7 @@
     <a class="Inicio" href="index.html">Inicio</a>
     <a href="Backend/Backend.html">Backend</a>
     <a href="Principal/Backoffice.html">Backoffice</a>
-    <a href="Principal/Mobile.html">Mobile</a>
+    <a href="Mobile/Mobile.html">Mobile</a>
     <a href="javascript:void(0);" class="icon" onclick="myFunction()">
         <i class="fa fa-bars"></i>
     </a>
