--- a/Backend/Projects.html
+++ b/Backend/Projects.html
@@ -24,7 +24,7 @@
 
     .text {
         text-align: center;
-        color: #416a59;
+        color: #183a1d;
         font-size: medium;
         font-weight: bold;
     }
@@ -137,7 +137,7 @@
     <h2>Documentación sobre la API</h2>
 </div>
 
-<div class="titleSec">
+<div class="text">
     <p>Para acceder a la documentación de la API, click </p>
 </div>
 
