--- a/Mobile/Emprendedor.html
+++ b/Mobile/Emprendedor.html
@@ -24,7 +24,7 @@
 
     .text {
         text-align: center;
-        color: #416a59;
+        color: #183a1d;
         font-size: medium;
         font-weight: bold;
     }
@@ -113,8 +113,18 @@
 </div>
 
 <div class="text">
+    <p>Como emprendedor queremos crear un proyecto.</p>
+    <img src="../Images/crearProyecto.jpg">
+</div>
+
+<div class="text">
     <p>Una vez creado el proyecto, se puede invitar a un veedor.</p>
     <img src="../Images/agregarVeedor.jpg">
+</div>
+
+<div class="text">
+    <p>Una vez invitado el veedor, se muestra una pantalla de confirmación</p>
+    <img src="../Images/veedorAvisado.jpg">
 </div>
 
 <div class="text">
