--- a/Mobile/Mobile.html
+++ b/Mobile/Mobile.html
@@ -101,7 +101,7 @@
 
 <div class="topnav" id="myTopnav">
     <a class="Inicio" href="../index.html">Inicio</a>
-    <a href="Backend.html">Backend</a>
+    <a href="../Backend/Backend.html">Backend</a>
     <a href="../Principal/Backoffice.html">Backoffice</a>
     <a href="../Mobile/Mobile.html">Mobile</a>
     <a href="javascript:void(0);" class="icon" onclick="myFunction()">
@@ -139,6 +139,27 @@
     <img src="../Images/verPerfiles.jpg">
 </div>
 
+<div class="titleSec">
+    <h2>Pantallas comúnes al patrocinador y al emprendedor</h2>
+</div>
+
+<div class="titleSec">
+    <h2>Chat</h2>
+</div>
+
+<div class="text">
+    <p>Tanto el emprendedor como el patrocinador pueden chatear con otros usuarios.</p>
+    <img src="../Images/chat.jpg">
+</div>
+
+<div class="titleSec">
+    <h2>Chat</h2>
+</div>
+
+<div class="text">
+    <p>Tanto el emprendedor como el patrocinador pueden tener como contactos otros usuarios.</p>
+    <img src="../Images/misContactos.jpg">
+</div>
 
 <div class="titleSec">
     <h2>Pantallas por tipo de usuario</h2>
