--- a/Mobile/Patrocinador.html
+++ b/Mobile/Patrocinador.html
@@ -24,7 +24,7 @@
 
     .text {
         text-align: center;
-        color: #416a59;
+        color: #183a1d;
         font-size: medium;
         font-weight: bold;
     }
@@ -109,12 +109,21 @@
 </div>
 
 <div class="titleSec">
-    <h2>Proyecto</h2>
+    <h2>Proyectos</h2>
 </div>
 
 <div class="text">
     <p>Como patrocinador quiero poder buscar proyectos para patrocinar</p>
     <img src="../Images/buscadorProyectosPatrocinador.jpg">
+</div>
+
+<div class="titleSec">
+    <h2>Patrocinios</h2>
+</div>
+
+<div class="text">
+    <p>Como patrocinador quiero poder ver los proyectos que estoy patrocinando</p>
+    <img src="../Images/misPatrocinios.jpg">
 </div>
 
 <script>
