--- a/Mobile/Veedor.html
+++ b/Mobile/Veedor.html
@@ -24,7 +24,7 @@
 
     .text {
         text-align: center;
-        color: #416a59;
+        color: #183a1d;
         font-size: medium;
         font-weight: bold;
     }
@@ -109,12 +109,36 @@
 </div>
 
 <div class="titleSec">
-    <h2>Proyecto</h2>
+    <h2>Veduría</h2>
 </div>
 
 <div class="text">
     <p>Siendo veedor, se nos puede invitar a un proyecto</p>
     <img src="../Images/aceptarVeedoria.jpg">
+</div>
+
+<div class="text">
+    <p>Si clickeamos en "aceptar" en la pantalla anterior, nos lleva al detalle del proyecto</p>
+    <img src="../Images/detalleProyectoAceptarVeduria.jpg">
+</div>
+
+<div class="text">
+    <p>Si nos convence y clickeamos en "aceptar" en la pantalla anterior, nos lleva a una pantalla de confirmación</p>
+    <img src="../Images/detalleProyectoAceptarVeduria.jpg">
+</div>
+
+<div class="text">
+    <p>Si clickeamos en "aceptar", nos lleva al detalle del proyecto</p>
+    <img src="../Images/confirmarVeduria.jpg">
+</div>
+
+<div class="titleSec">
+    <h2>Etapa</h2>
+</div>
+
+<div class="text">
+    <p>Siendo veedor, podemos aceptar etapas para que se libere el dinero de la misma al emprendedor</p>
+    <img src="../Images/confirmarEtapa.jpg">
 </div>
 
 <script>
