--- a/Backend/Smartcontracts.html
+++ b/Backend/Smartcontracts.html
@@ -24,7 +24,7 @@
 
     .text {
         text-align: center;
-        color: #416a59;
+        color: #183a1d;
         font-size: medium;
         font-weight: bold;
     }
