estructura de backoffice hecha, falta achicar imagenes

--- a/Backend/Backend.html
+++ b/Backend/Backend.html
@@ -103,7 +103,7 @@
 <div class="topnav" id="myTopnav">
     <a class="Inicio" href="../index.html">Inicio</a>
     <a href="Backend.html">Backend</a>
-    <a href="../Principal/Backoffice.html">Backoffice</a>
+    <a href="../Backoffice/Backoffice.html">Backoffice</a>
     <a href="../Mobile/Mobile.html">Mobile</a>
     <a href="javascript:void(0);" class="icon" onclick="myFunction()">
         <i class="fa fa-bars"></i>
@@ -120,7 +120,7 @@
 
 <div class="titleSec">
     <h2>Arquitectura general</h2>
-    <img src="../Images/ArquitecturaSeedyfiuba.png">
+    <img src="../Images/Mobile/ArquitecturaSeedyfiuba.png">
 </div>
 
 <div class="titleSec">
