--- a/Backoffice/Projects.html
+++ b/Backoffice/Projects.html
@@ -98,64 +98,22 @@
 </div>
 
 <div class="w3-sidebar w3-bar-block sidebar" style="width:25%;right:0" >
-    <h1 class="w3-bar-item">Microservicios</h1>
+    <h1 class="w3-bar-item">Menú</h1>
+    <a href="Home.html" class="w3-bar-item w3-button sidebutton">Home</a>
     <a href="Users.html" class="w3-bar-item w3-button sidebutton">Users</a>
     <a href="Projects.html" class="w3-bar-item w3-button sidebutton">Projects</a>
-    <a href="Middle.html" class="w3-bar-item w3-button sidebutton">Middle</a>
-    <a href="Smartcontracts.html" class="w3-bar-item w3-button sidebutton">Smartcontracts</a>
+    <a href="Servers.html" class="w3-bar-item w3-button sidebutton">Servers</a>
 </div>
 
 <div class="titlePrin">
-    <h1>Smartcontracts</h1>
-</div>
-
-<div class="titleSec">
-    <h2>Repositorio</h2>
-</div>
-
-<div class="titleSec">
-    <p>Para acceder al repositorio, click <a href="https://github.com/seedyfiuba/smart-contracts-api">aquí</a></p>
-</div>
-
-<div class="titleSec">
-    <h2>Instalación</h2>
+    <h1>Projects</h1>
 </div>
 
 <div class="text">
-    <p>Para instalar el proyecto, seguir las siguientes <a href="https://github.com/seedyfiuba/smart-contracts-api#installation">instrucciones</a></p>
+    <p>Se pueden visualizar los datos de los proyectos</p>
+    <img src="../Images/Backoffice/historicoProyectos.png">
 </div>
 
-<div class="titleSec">
-    <h2>Deploy</h2>
-</div>
-
-<div class="text">
-    <p>Para deployar, seguir las siguientes <a href="https://github.com/seedyfiuba/smart-contracts-api#deployment">instrucciones</a></p>
-</div>
-
-<div class="titleSec">
-    <h2>Correr proceso</h2>
-</div>
-
-<div class="text">
-    <p>Para correr el proceso, seguir las siguientes <a href="https://github.com/seedyfiuba/smart-contracts-api#start-process">instrucciones</a></p>
-</div>
-
-<div class="titleSec">
-    <h2>Documentación sobre la API</h2>
-</div>
-
-<div class="titleSec">
-    <p>Para ver algunos ejemplos de uso, click <a href="https://github.com/seedyfiuba/smart-contracts-api#available-endpoints">aquí</a></p>
-</div>
-
-<div class="titleSec">
-    <h2>Otras funcionalidades</h2>
-</div>
-
-<div class="titleSec">
-    <p>Para ver qué otros comandos se pueden correr, click <a href="https://github.com/seedyfiuba/smart-contracts-api#usage">aquí</a></p>
-</div>
 
 <script>
     function myFunction() {
