--- a/Mobile/Patrocinador.html
+++ b/Mobile/Patrocinador.html
@@ -90,7 +90,7 @@
 <div class="topnav" id="myTopnav">
     <a class="Inicio" href="../index.html">Inicio</a>
     <a href="../Backend/Backend.html">Backend</a>
-    <a href="../Principal/Backoffice.html">Backoffice</a>
+    <a href="../Backoffice/Backoffice.html">Backoffice</a>
     <a href="../Mobile/Mobile.html">Mobile</a>
     <a href="javascript:void(0);" class="icon" onclick="myFunction()">
         <i class="fa fa-bars"></i>
@@ -114,7 +114,7 @@
 
 <div class="text">
     <p>Como patrocinador quiero poder buscar proyectos para patrocinar</p>
-    <img src="../Images/buscadorProyectosPatrocinador.jpg">
+    <img src="../Images/Mobile/buscadorProyectosPatrocinador.jpg">
 </div>
 
 <div class="titleSec">
@@ -123,7 +123,7 @@
 
 <div class="text">
     <p>Como patrocinador quiero poder ver los proyectos que estoy patrocinando</p>
-    <img src="../Images/misPatrocinios.jpg">
+    <img src="../Images/Mobile/misPatrocinios.jpg">
 </div>
 
 <script>
