--- a/Backend/Middle.html
+++ b/Backend/Middle.html
@@ -90,7 +90,7 @@
 <div class="topnav" id="myTopnav">
     <a class="Inicio" href="../index.html">Inicio</a>
     <a href="../Backend/Backend.html">Backend</a>
-    <a href="../Principal/Backoffice.html">Backoffice</a>
+    <a href="../Backoffice/Backoffice.html">Backoffice</a>
     <a href="../Mobile/Mobile.html">Mobile</a>
     <a href="javascript:void(0);" class="icon" onclick="myFunction()">
         <i class="fa fa-bars"></i>
