--- a/Backoffice/Home.html
+++ b/Backoffice/Home.html
@@ -24,9 +24,18 @@
 
     .text {
         text-align: center;
-        color: #39395f;
+        color: #183a1d;
         font-size: medium;
         font-weight: bold;
+    }
+
+    .sidebar {
+        padding-left: 580px;
+        color: #183a1d;
+    }
+
+    .sidebutton{
+        color: #183a1d;
     }
 
     .topnav {
@@ -81,25 +90,65 @@
 <div class="topnav" id="myTopnav">
     <a class="Inicio" href="../index.html">Inicio</a>
     <a href="../Backend/Backend.html">Backend</a>
-    <a href="Backoffice.html">Backoffice</a>
+    <a href="../Backoffice/Backoffice.html">Backoffice</a>
     <a href="../Mobile/Mobile.html">Mobile</a>
     <a href="javascript:void(0);" class="icon" onclick="myFunction()">
         <i class="fa fa-bars"></i>
     </a>
 </div>
 
+<div class="w3-sidebar w3-bar-block sidebar" style="width:25%;right:0" >
+    <h1 class="w3-bar-item">Menú</h1>
+    <a href="Home.html" class="w3-bar-item w3-button sidebutton">Home</a>
+    <a href="Users.html" class="w3-bar-item w3-button sidebutton">Users</a>
+    <a href="Projects.html" class="w3-bar-item w3-button sidebutton">Projects</a>
+    <a href="Servers.html" class="w3-bar-item w3-button sidebutton">Servers</a>
+</div>
+
 <div class="titlePrin">
-    <h1>BACKOFFICE</h1>
+    <h1>Home</h1>
 </div>
 
 <div class="titleSec">
-    <h2></h2>
+    <h2>Menu de metricas</h2>
 </div>
 
 <div class="text">
-    <p></p>
+    <p>En esta sección se pueden visualizar las metricas</p>
+    <p>Se puede elegir entre las de los usuarios:</p>
+    <img src="../Images/Backoffice/metricasUsers.png">
+    <p>Proyectos:</p>
+    <img src="../Images/Backoffice/MetricasProyectos.png">
+    <p>O las de las transacciones</p>
+    <img src="../Images/Backoffice/metricasTransacciones.png">
 </div>
 
+<div class="titleSec">
+    <h2>Users</h2>
+</div>
+
+<div class="text">
+    <p>Si se elige la opcion Users, nos lleva a la siguiente pantalla</p>
+    <img src="../Images/Backoffice/detalleMetricasUsers.png">
+</div>
+
+<div class="titleSec">
+    <h2>Projects</h2>
+</div>
+
+<div class="text">
+    <p>Si se elige la opcion Projects, nos lleva a la siguiente pantalla</p>
+    <img src="../Images/Backoffice/detalleMetricasProyectos.png">
+</div>
+
+<div class="titleSec">
+    <h2>Transactions</h2>
+</div>
+
+<div class="text">
+    <p>Si se elige la opcion Users, nos lleva a la siguiente pantalla</p>
+    <img src="../Images/Backoffice/detalleMetricasTransacciones.png">
+</div>
 
 <script>
     function myFunction() {
