--- a/Mobile/Mobile.html
+++ b/Mobile/Mobile.html
@@ -102,7 +102,7 @@
 <div class="topnav" id="myTopnav">
     <a class="Inicio" href="../index.html">Inicio</a>
     <a href="../Backend/Backend.html">Backend</a>
-    <a href="../Principal/Backoffice.html">Backoffice</a>
+    <a href="../Backoffice/Backoffice.html">Backoffice</a>
     <a href="../Mobile/Mobile.html">Mobile</a>
     <a href="javascript:void(0);" class="icon" onclick="myFunction()">
         <i class="fa fa-bars"></i>
@@ -127,7 +127,7 @@
 
 <div class="text">
     <p>Todo usuario debe poder registrarse o iniciar sesión</p>
-    <img src="../Images/login.jpg">
+    <img src="../Images/Mobile/loginMobile.jpg">
 </div>
 
 <div class="titleSec">
@@ -136,7 +136,7 @@
 
 <div class="text">
     <p>Todos los usuarios pueden visualizar los perfiles de otros usuarios.</p>
-    <img src="../Images/verPerfiles.jpg">
+    <img src="../Images/Mobile/verPerfiles.jpg">
 </div>
 
 <div class="titleSec">
@@ -149,7 +149,7 @@
 
 <div class="text">
     <p>Tanto el emprendedor como el patrocinador pueden chatear con otros usuarios.</p>
-    <img src="../Images/chat.jpg">
+    <img src="../Images/Mobile/chat.jpg">
 </div>
 
 <div class="titleSec">
@@ -158,7 +158,7 @@
 
 <div class="text">
     <p>Tanto el emprendedor como el patrocinador pueden tener como contactos otros usuarios.</p>
-    <img src="../Images/misContactos.jpg">
+    <img src="../Images/Mobile/misContactos.jpg">
 </div>
 
 <div class="titleSec">
