--- a/Mobile/Veedor.html
+++ b/Mobile/Veedor.html
@@ -90,7 +90,7 @@
 <div class="topnav" id="myTopnav">
     <a class="Inicio" href="../index.html">Inicio</a>
     <a href="../Backend/Backend.html">Backend</a>
-    <a href="../Principal/Backoffice.html">Backoffice</a>
+    <a href="../Backoffice/Backoffice.html">Backoffice</a>
     <a href="../Mobile/Mobile.html">Mobile</a>
     <a href="javascript:void(0);" class="icon" onclick="myFunction()">
         <i class="fa fa-bars"></i>
@@ -114,22 +114,22 @@
 
 <div class="text">
     <p>Siendo veedor, se nos puede invitar a un proyecto</p>
-    <img src="../Images/aceptarVeedoria.jpg">
+    <img src="../Images/Mobile/aceptarVeedoria.jpg">
 </div>
 
 <div class="text">
     <p>Si clickeamos en "aceptar" en la pantalla anterior, nos lleva al detalle del proyecto</p>
-    <img src="../Images/detalleProyectoAceptarVeduria.jpg">
+    <img src="../Images/Mobile/detalleProyectoAceptarVeduria.jpg">
 </div>
 
 <div class="text">
     <p>Si nos convence y clickeamos en "aceptar" en la pantalla anterior, nos lleva a una pantalla de confirmación</p>
-    <img src="../Images/detalleProyectoAceptarVeduria.jpg">
+    <img src="../Images/Mobile/detalleProyectoAceptarVeduria.jpg">
 </div>
 
 <div class="text">
     <p>Si clickeamos en "aceptar", nos lleva al detalle del proyecto</p>
-    <img src="../Images/confirmarVeduria.jpg">
+    <img src="../Images/Mobile/confirmarVeduria.jpg">
 </div>
 
 <div class="titleSec">
@@ -138,7 +138,7 @@
 
 <div class="text">
     <p>Siendo veedor, podemos aceptar etapas para que se libere el dinero de la misma al emprendedor</p>
-    <img src="../Images/confirmarEtapa.jpg">
+    <img src="../Images/Mobile/confirmarEtapa.jpg">
 </div>
 
 <script>
