--- a/Backoffice/Home.html
+++ b/Backoffice/Home.html
@@ -98,7 +98,7 @@
 </div>
 
 <div class="w3-sidebar w3-bar-block sidebar" style="width:25%;right:0" >
-    <h1 class="w3-bar-item">Menú</h1>
+    <h1 class="w3-bar-item" style="padding-left: 60px">Menú</h1>
     <a href="Home.html" class="w3-bar-item w3-button sidebutton">Home</a>
     <a href="Users.html" class="w3-bar-item w3-button sidebutton">Users</a>
     <a href="Projects.html" class="w3-bar-item w3-button sidebutton">Projects</a>
@@ -118,7 +118,7 @@
     <p>Se puede elegir entre las de los usuarios:</p>
     <img src="../Images/Backoffice/metricasUsers.png">
     <p>Proyectos:</p>
-    <img src="../Images/Backoffice/MetricasProyectos.png">
+    <img src="../Images/Backoffice/metricasProyectos.png">
     <p>O las de las transacciones</p>
     <img src="../Images/Backoffice/metricasTransacciones.png">
 </div>
@@ -146,7 +146,7 @@
 </div>
 
 <div class="text">
-    <p>Si se elige la opcion Users, nos lleva a la siguiente pantalla</p>
+    <p>Si se elige la opcion Transactions, nos lleva a la siguiente pantalla</p>
     <img src="../Images/Backoffice/detalleMetricasTransacciones.png">
 </div>
 
