--- a/Backoffice/Users.html
+++ b/Backoffice/Users.html
@@ -98,7 +98,7 @@
 </div>
 
 <div class="w3-sidebar w3-bar-block sidebar" style="width:25%;right:0" >
-  <h1 class="w3-bar-item">Menú</h1>
+  <h1 class="w3-bar-item" style="padding-left: 60px">Menú</h1>
   <a href="Home.html" class="w3-bar-item w3-button sidebutton">Home</a>
   <a href="Users.html" class="w3-bar-item w3-button sidebutton">Users</a>
   <a href="Projects.html" class="w3-bar-item w3-button sidebutton">Projects</a>
