--- a/Backend/Smartcontracts.html
+++ b/Backend/Smartcontracts.html
@@ -98,7 +98,7 @@
 </div>
 
 <div class="w3-sidebar w3-bar-block sidebar" style="width:25%;right:0" >
-    <h1 class="w3-bar-item">Microservicios</h1>
+    <h1 class="w3-bar-item" style="padding-left: 20px">Microservicios</h1>
     <a href="Users.html" class="w3-bar-item w3-button sidebutton">Users</a>
     <a href="Projects.html" class="w3-bar-item w3-button sidebutton">Projects</a>
     <a href="Middle.html" class="w3-bar-item w3-button sidebutton">Middle</a>
@@ -113,7 +113,7 @@
     <h2>Repositorio</h2>
 </div>
 
-<div class="titleSec">
+<div class="text">
     <p>Para acceder al repositorio, click <a href="https://github.com/seedyfiuba/smart-contracts-api">aquí</a></p>
 </div>
 
@@ -145,7 +145,7 @@
     <h2>Documentación sobre la API</h2>
 </div>
 
-<div class="titleSec">
+<div class="text">
     <p>Para ver algunos ejemplos de uso, click <a href="https://github.com/seedyfiuba/smart-contracts-api#available-endpoints">aquí</a></p>
 </div>
 
@@ -153,7 +153,7 @@
     <h2>Otras funcionalidades</h2>
 </div>
 
-<div class="titleSec">
+<div class="text">
     <p>Para ver qué otros comandos se pueden correr, click <a href="https://github.com/seedyfiuba/smart-contracts-api#usage">aquí</a></p>
 </div>
 
