--- a/Backend/Users.html
+++ b/Backend/Users.html
@@ -97,7 +97,7 @@
 </div>
 
 <div class="w3-sidebar w3-bar-block sidebar" style="width:25%;right:0" >
-    <h1 class="w3-bar-item">Microservicios</h1>
+    <h1 class="w3-bar-item" style="padding-left: 20px">Microservicios</h1>
     <a href="Users.html" class="w3-bar-item w3-button sidebutton">Users</a>
     <a href="Projects.html" class="w3-bar-item w3-button sidebutton">Projects</a>
     <a href="Middle.html" class="w3-bar-item w3-button sidebutton">Middle</a>
@@ -112,7 +112,7 @@
     <h2>Repositorio</h2>
 </div>
 
-<div class="titleSec">
+<div class="text">
     <p>Para acceder al repositorio, click <a href="https://github.com/seedyfiuba/users-api">aquí</a></p>
 </div>
 
@@ -136,7 +136,7 @@
     <h2>Documentación sobre la API</h2>
 </div>
 
-<div class="titleSec">
+<div class="text">
     <p>Para acceder a la documentación de la API, click </p>
 </div>
 
