--- a/Mobile/Patrocinador.html
+++ b/Mobile/Patrocinador.html
@@ -98,7 +98,7 @@
 </div>
 
 <div class="w3-sidebar w3-bar-block sidebar" style="width:25%;right:0" >
-    <h1 class="w3-bar-item">Pantallas</h1>
+    <h1 class="w3-bar-item" style="padding-left: 50px">Pantallas</h1>
     <a href="Emprendedor.html" class="w3-bar-item w3-button sidebutton">Emprendedor</a>
     <a href="Patrocinador.html" class="w3-bar-item w3-button sidebutton">Patrocinador</a>
     <a href="Veedor.html" class="w3-bar-item w3-button sidebutton">Veedor</a>
