--- a/Backoffice/Backoffice.html
+++ b/Backoffice/Backoffice.html
@@ -26,6 +26,7 @@
         text-align: center;
         color: #183a1d;
         font-size: medium;
+        font-weight: bold;
     }
 
     .topnav {
@@ -114,7 +115,7 @@
 </div>
 
 <div class="text">
-    <p style="font-weight: bold">En esta sección se incluye la documentación referida al backoffice.</p>
+    <p>En esta sección se incluye la documentación referida al backoffice.</p>
 </div>
 
 <div class="titleSec">
