--- a/Mobile/Mobile.html
+++ b/Mobile/Mobile.html
@@ -26,6 +26,7 @@
         text-align: center;
         color: #183a1d;
         font-size: medium;
+        font-weight: bold;
     }
 
     .topnav {
