backend almost finished - old links remaining

--- a/Backend/Middle.html
+++ b/Backend/Middle.html
@@ -9,8 +9,7 @@
     body {
         font-family: Verdana, "Times New Roman";
         color: #416a59;
-        background-image: url("https://png.pngtree.com/thumb_back/fw800/background/20190221/ourmid/pngtree-ad-background-poster-h5-image_30945.jpg");
-        background-color: #f5eec2 }
+        background-color: #97BE88 }
 
     .titlePrin{
         text-align: center;
@@ -105,7 +104,7 @@
     <a href="Smartcontracts.html" class="w3-bar-item w3-button sidebutton">Smartcontracts</a>
 </div>
 
-<div class="titlePrin">
+<div class="titleSec" style="color: #183a1d">
     <h1>Middle</h1>
 </div>
 
@@ -114,7 +113,23 @@
 </div>
 
 <div class="text">
-    <p>Para acceder al repositorio, click </p>
+    <p>Para acceder al repositorio, click <a href = "https://github.com/seedy-fiuba/seedy-fiuba-middle">aquí</a></p>
+</div>
+
+<div class="titleSec">
+    <h2>Local</h2>
+</div>
+
+<div class="text">
+    <p>Para correr de forma local, seguir las siguientes <a href="https://github.com/seedy-fiuba/seedy-fiuba-middle#how-to-run-locally">instrucciones</a></p>
+</div>
+
+<div class="titleSec">
+    <h2>Deploy</h2>
+</div>
+
+<div class="text">
+    <p>Para deployar a Heroku, seguir las siguientes <a href="https://github.com/seedy-fiuba/seedy-fiuba-middle#how-to-deploy-docker-image-to-heroku">instrucciones</a></p>
 </div>
 
 <div class="titleSec">
