--- a/Backend/Smartcontracts.html
+++ b/Backend/Smartcontracts.html
@@ -9,8 +9,7 @@
     body {
         font-family: Verdana, "Times New Roman";
         color: #416a59;
-        background-image: url("https://png.pngtree.com/thumb_back/fw800/background/20190221/ourmid/pngtree-ad-background-poster-h5-image_30945.jpg");
-        background-color: #f5eec2 }
+        background-color: #97BE88 }
 
     .titlePrin{
         text-align: center;
@@ -105,8 +104,8 @@
     <a href="Smartcontracts.html" class="w3-bar-item w3-button sidebutton">Smartcontracts</a>
 </div>
 
-<div class="titlePrin">
-    <h1>Smartcontracts</h1>
+<div class="titlePrin" style="color: #183a1d">
+    <h1>Smartcontracts </h1>
 </div>
 
 <div class="titleSec">
