--- a/Backoffice/Servers.html
+++ b/Backoffice/Servers.html
@@ -9,8 +9,7 @@
     body {
         font-family: Verdana, "Times New Roman";
         color: #416a59;
-        background-image: url("https://png.pngtree.com/thumb_back/fw800/background/20190221/ourmid/pngtree-ad-background-poster-h5-image_30945.jpg");
-        background-color: #f5eec2 }
+        background-color: #BCCA8B }
 
     .titlePrin{
         text-align: center;
@@ -105,7 +104,7 @@
     <a href="Servers.html" class="w3-bar-item w3-button sidebutton">Servers</a>
 </div>
 
-<div class="titlePrin">
+<div class="titlePrin" style="color: #183a1d">
     <h1>Servers</h1>
 </div>
 
