--- a/Backend/Users.html
+++ b/Backend/Users.html
@@ -9,8 +9,7 @@
     body {
         font-family: Verdana, "Times New Roman";
         color: #416a59;
-        background-image: url("https://png.pngtree.com/thumb_back/fw800/background/20190221/ourmid/pngtree-ad-background-poster-h5-image_30945.jpg");
-        background-color: #f5eec2 }
+        background-color: #97BE88 }
 
     .titlePrin{
         text-align: center;
@@ -104,7 +103,7 @@
     <a href="Smartcontracts.html" class="w3-bar-item w3-button sidebutton">Smartcontracts</a>
 </div>
 
-<div class="titlePrin">
+<div class="titlePrin" style="color: #183a1d">
     <h1>Users</h1>
 </div>
 
@@ -137,7 +136,7 @@
 </div>
 
 <div class="text">
-    <p>Para acceder a la documentación de la API, click </p>
+    <p>Para acceder a la documentación de la API, click <a href="https://seedy-fiuba-users-api.herokuapp.com/docs/">aquí</a></p>
 </div>
 
 <script>
