--- a/Mobile/Mobile.html
+++ b/Mobile/Mobile.html
@@ -9,8 +9,7 @@
     body {
         font-family: Verdana, "Times New Roman";
         color: #416a59;
-        background-image: url("https://png.pngtree.com/thumb_back/fw800/background/20190221/ourmid/pngtree-ad-background-poster-h5-image_30945.jpg");
-        background-color: #f5eec2 }
+        background-color: #EAEC9C }
 
     .titlePrin{
         text-align: center;
@@ -117,6 +116,15 @@
 <div class="text">
     <p style="font-weight: bold">En esta sección se incluye la documentación referida a la aplicación mobile.</p>
 </div>
+
+<div class="titleSec">
+    <h2>Repositorio</h2>
+</div>
+
+<div class="text">
+    <p>Para acceder al repositorio, click <a href="https://github.com/seedy-fiuba/seedy-fiuba-android">aqui</a></p>
+</div>
+
 
 <div class="titleSec">
     <h2>Pantallas comúnes a todo tipo de usuario</h2>
