--- a/Backend/Smartcontracts.html
+++ b/Backend/Smartcontracts.html
@@ -113,7 +113,7 @@
 </div>
 
 <div class="text">
-    <p>Para acceder al repositorio, click <a href="https://github.com/seedyfiuba/smart-contracts-api">aquí</a></p>
+    <p>Para acceder al repositorio, click <a href="https://github.com/seedy-fiuba/smart-contracts-api">aquí</a></p>
 </div>
 
 <div class="titleSec">
@@ -121,7 +121,7 @@
 </div>
 
 <div class="text">
-    <p>Para instalar el proyecto, seguir las siguientes <a href="https://github.com/seedyfiuba/smart-contracts-api#installation">instrucciones</a></p>
+    <p>Para instalar el proyecto, seguir las siguientes <a href="https://github.com/seedy-fiuba/smart-contracts-api#installation">instrucciones</a></p>
 </div>
 
 <div class="titleSec">
@@ -129,7 +129,7 @@
 </div>
 
 <div class="text">
-    <p>Para deployar, seguir las siguientes <a href="https://github.com/seedyfiuba/smart-contracts-api#deployment">instrucciones</a></p>
+    <p>Para deployar, seguir las siguientes <a href="https://github.com/seedy-fiuba/smart-contracts-api#deployment">instrucciones</a></p>
 </div>
 
 <div class="titleSec">
@@ -137,7 +137,7 @@
 </div>
 
 <div class="text">
-    <p>Para correr el proceso, seguir las siguientes <a href="https://github.com/seedyfiuba/smart-contracts-api#start-process">instrucciones</a></p>
+    <p>Para correr el proceso, seguir las siguientes <a href="https://github.com/seedy-fiuba/smart-contracts-api#start-process">instrucciones</a></p>
 </div>
 
 <div class="titleSec">
@@ -145,7 +145,7 @@
 </div>
 
 <div class="text">
-    <p>Para ver algunos ejemplos de uso, click <a href="https://github.com/seedyfiuba/smart-contracts-api#available-endpoints">aquí</a></p>
+    <p>Para ver la documentación de la API y algunos ejemplos de uso, click <a href="https://github.com/seedy-fiuba/smart-contracts-api#available-endpoints">aquí</a></p>
 </div>
 
 <div class="titleSec">
@@ -153,7 +153,7 @@
 </div>
 
 <div class="text">
-    <p>Para ver qué otros comandos se pueden correr, click <a href="https://github.com/seedyfiuba/smart-contracts-api#usage">aquí</a></p>
+    <p>Para ver qué otros comandos se pueden correr, click <a href="https://github.com/seedy-fiuba/smart-contracts-api#usage">aquí</a></p>
 </div>
 
 <script>
