--- a/Backend/Users.html
+++ b/Backend/Users.html
@@ -112,7 +112,7 @@
 </div>
 
 <div class="text">
-    <p>Para acceder al repositorio, click <a href="https://github.com/seedyfiuba/users-api">aquí</a></p>
+    <p>Para acceder al repositorio, click <a href="https://github.com/seedy-fiuba/users-api">aquí</a></p>
 </div>
 
 <div class="titleSec">
@@ -120,7 +120,7 @@
 </div>
 
 <div class="text">
-    <p>Para correr de forma local, seguir las siguientes <a href="https://github.com/seedyfiuba/users-api/blob/develop/README.md#how-to-run-locally">instrucciones</a></p>
+    <p>Para correr de forma local, seguir las siguientes <a href="https://github.com/seedy-fiuba/users-api#how-to-run-locally">instrucciones</a></p>
 </div>
 
 <div class="titleSec">
@@ -128,7 +128,7 @@
 </div>
 
 <div class="text">
-    <p>Para deployar a Heroku, seguir las siguientes <a href="https://github.com/seedyfiuba/users-api/blob/develop/README.md#how-to-deploy-docker-image-to-heroku">instrucciones</a></p>
+    <p>Para deployar a Heroku, seguir las siguientes <a href="https://github.com/seedy-fiuba/users-api#how-to-deploy-docker-image-to-heroku">instrucciones</a></p>
 </div>
 
 <div class="titleSec">
