--- a/Backoffice/Backoffice.html
+++ b/Backoffice/Backoffice.html
@@ -118,6 +118,14 @@
 </div>
 
 <div class="titleSec">
+    <h2>Repositorio</h2>
+</div>
+
+<div class="text">
+    <p>Para acceder al repositorio, click <a href="https://github.com/seedy-fiuba/seedy-fiuba-backoffice">aqui</a></p>
+</div>
+
+<div class="titleSec">
     <h2>Login</h2>
 </div>
 
