--- a/index.html
+++ b/index.html
@@ -121,7 +121,14 @@
 </div>
 
 
+<div class="titleSec">
+    <h2>Bitacora</h2>
+</div>
 
+<div class="text">
+    <p>Para acceder a la bitacora, hacer click <a href="https://docs.google.com/document/d/1A7JHQsVMrSYfoilLXDcHslaR5nk55ZJh6PDkdxUFuOM/edit?usp=sharing">aqui</a></p>
+
+</div>
 
 
 <script>
